--- a/static/sass/components/_component.article.scss
+++ b/static/sass/components/_component.article.scss
@@ -26,7 +26,22 @@
     @include font-size(12);
     line-height: 1.33;
     font-weight: $weightMedium;
+  }
+
+  &__category-wrap {
+    @include flexbox;
+    @include align-items(center);
     margin-bottom: 10px;
+  }
+
+  &__additional-category {
+    margin-right: 10px;
+    color: $white;
+    @include font-size(12);
+    line-height: 1.33;
+    font-weight: $weightMedium;
+    padding: 2px 5px;
+    background-color: $blue_sh5;
   }
 
   &__title {
