--- a/static/sass/components/_component.article-gallery.scss
+++ b/static/sass/components/_component.article-gallery.scss
@@ -1,36 +1,41 @@
 .c-article {
+    .gallery-container {
+        margin-bottom: 20px;
+        .article-gallery {
+            &__caption {
+                position: absolute;
+                left: 0;
+                bottom: 0;
+                background-color: $black;
+                width: 100%;
+
+                p {
+                    color: $white;
+                    margin-bottom: 0;
+                    padding: 10px;
+                    font-size: 12px;
+                    line-height: 1.33;
+                    font-weight: $weightMedium;
+                    font-style: normal;
+                }
+            }
+
+            &__img {
+                &-container {
+                    height: 100%;
+                    background-color: $grey3;
+                    @include flexbox;
+                    @include align-items(center);
+                    @include justify-content(center);
+                }
+            }
+        }
+    }
+
     &.c-article__carousel {
         .gallery-container {
             margin-bottom: 20px;
             .article-gallery {
-                &__caption {
-                    position: absolute;
-                    left: 0;
-                    bottom: 0;
-                    background-color: $black;
-                    width: 100%;
-
-                    p {
-                        color: $white;
-                        margin-bottom: 0;
-                        padding: 10px;
-                        font-size: 12px;
-                        line-height: 1.33;
-                        font-weight: $weightMedium;
-                        font-style: normal;
-                    }
-                }
-
-                &__img {
-                    &-container {
-                        height: 100%;
-                        background-color: $grey3;
-                        @include flexbox;
-                        @include align-items(center);
-                        @include justify-content(center);
-                    }
-                }
-
                 .owl-prev {
                     background-image: url("../icons/elements-gallery-arrow-reverse.svg");
                     background-color: transparent !important;
@@ -55,6 +60,75 @@
             .owl-thumbs,
             #counter {
                 display: none;
+            }
+        }
+    }
+
+    &.c-article__galleryView {
+        .gallery-container {
+            #counter {
+                position: absolute;
+                right: 15px;
+                bottom: 0;
+                @include font-size(14);
+                font-weight: $weightMedium;
+                line-height: 1.14;
+                color: $black;
+            }
+            .owl-thumbs {
+                margin-top: 15px;
+            }
+            .owl-thumb-item {
+                width: 135px;
+                height: 95px;
+
+                + .owl-thumb-item {
+                    margin-left: 8px;
+                }
+
+                img {
+                    object-fit: cover;
+                    height: 100%;
+                    width: 100%;
+                    object-position: center;
+                }
+
+                &.active {
+                    border: none;
+                    @include opacity(0.3);
+                }
+            }
+
+            @include responsive(xs) {
+                @include respond-to(lg) {
+                    .owl-carousel {
+                        position: static;
+
+                        .owl-nav {
+                            left: 0;
+                            bottom: 135px;
+                            width: auto;
+                            top: auto;
+                            @include translate(0, 0);
+                            height: 40px;
+
+                            .owl-prev,
+                            .owl-next {
+                                @include size(40px);
+                                padding: 0 !important;
+                                background-color: $black !important;
+                            }
+                            .owl-next {
+                                margin-left: 5px;
+                            }
+                        }
+                    }
+                    #counter {
+                        left: 105px;
+                        right: auto;
+                        bottom: 147px;
+                    }
+                }
             }
         }
     }
