card height issue fixes

--- a/static/sass/cards/_card-2.scss
+++ b/static/sass/cards/_card-2.scss
@@ -117,6 +117,10 @@
                 max-height: 185px;
                 min-height: 185px;
             }
+
+            &__heading {
+                max-height: 60px;
+            }
         }
     }
 }
