button added in article page

--- a/article.twig
+++ b/article.twig
@@ -230,6 +230,9 @@ article.additionalInfo.image_crop == 'full' %}
                                                     </div>
                                                 </div>
                                             </div>
+                                            {% if article.userHasEditArticleAccess is defined and article.userHasEditArticleAccess == 1 %}
+                                                <a href="{{article.editUrl}}" target="_blank" class="c-article__edit-link" data-access="{{article.userHasEditArticleAccess}}">Edit article</a>
+                                            {% endif %}
                                         </div>
                                     </div>
                                 </div>
