--- a/static/sass/components/_component.article.scss
+++ b/static/sass/components/_component.article.scss
@@ -34,6 +34,22 @@
     margin-bottom: 10px;
   }
 
+  &__edit-link {
+    display: block;
+    margin: 20px 0 10px;
+    background-color: var(--main-color);
+    color: $white;
+    font-weight: $weightBold;
+    @include font-size(16);
+    line-height: 1.5;
+    @include border-radius(6px);
+    height: 40px;
+    @include flexbox;
+    @include align-items(center);
+    @include justify-content(center);
+    text-decoration: none;
+  }
+
   &__additional-category {
     margin-right: 10px;
     color: $white;
