--- a/layouts/partials/header/_header.twig
+++ b/layouts/partials/header/_header.twig
@@ -159,32 +159,32 @@
         </button>
         <div class="u-generic-socialIcons">
             {% if config.social.facebook is defined and config.social.facebook is not empty %}
-                <a href="{{config.social.facebook}}" class="u-generic-socialIcons__item">
+                <a href="{{config.social.facebook}}" class="u-generic-socialIcons__item" target="_blank">
                     <span class="fa fa-facebook"></span>
                 </a>
             {% endif %}
             {% if config.social.twitter is defined and config.social.twitter is not empty %}
-                <a href="{{config.social.twitter}}" class="u-generic-socialIcons__item">
+                <a href="{{config.social.twitter}}" class="u-generic-socialIcons__item" target="_blank">
                     <span class="fa fa-twitter"></span>
                 </a>
             {% endif %}
             {% if config.social.instagram is defined and config.social.instagram is not empty %}
-                <a href="{{config.social.instagram}}" class="u-generic-socialIcons__item">
+                <a href="{{config.social.instagram}}" class="u-generic-socialIcons__item" target="_blank">
                     <span class="fa fa-instagram"></span>
                 </a>
             {% endif %}
             {% if config.social.linkedin is defined and config.social.linkedin is not empty %}
-                <a href="{{config.social.linkedin}}" class="u-generic-socialIcons__item">
+                <a href="{{config.social.linkedin}}" class="u-generic-socialIcons__item" target="_blank">
                     <span class="fa fa-linkedin"></span>
                 </a>
             {% endif %}
             {% if config.social.vimeo is defined and config.social.vimeo is not empty %}
-                <a href="{{config.social.vimeo}}" class="u-generic-socialIcons__item">
+                <a href="{{config.social.vimeo}}" class="u-generic-socialIcons__item" target="_blank">
                     <span class="fa fa-vimeo"></span>
                 </a>
             {% endif %}
             {% if config.social.rss is defined and config.social.rss is not empty %}
-                <a href="{{config.social.rss}}" class="u-generic-socialIcons__item">
+                <a href="{{config.social.rss}}" class="u-generic-socialIcons__item" target="_blank">
                     <span class="fa fa-rss"></span>
                 </a>
             {% endif %}
