--- a/static/sass/components/_component.header.scss
+++ b/static/sass/components/_component.header.scss
@@ -67,6 +67,7 @@
         @include flexbox;
         @include align-items(center);
         @include justify-content(center);
+        text-decoration: none;
 
         span {
             @include font-size(16);
