--- a/static/sass/main.scss
+++ b/static/sass/main.scss
@@ -41,6 +41,7 @@
 @import "component.related-articles";
 @import "component.article-gallery";
 @import "component.author";
+@import "component.notify";
 
 // Events
 @import "component.eventform";
