--- a/layout-article-gallery.twig
+++ b/layout-article-gallery.twig
@@ -206,7 +206,7 @@ article.additionalInfo.image_crop == 'full' %}
                             </div>
                         </div>
                         <div class="col-12 col-lg-10 mx-auto">
-                            <div class="c-article__main-content">
+                            <div class="c-article__main-content mt-5">
                                 <div class="c-article__container">
                                     {{ ArticleContent | _resizeImages({'width': 600}) | raw }}
                                 </div>
