--- a/user-posts.twig
+++ b/user-posts.twig
@@ -24,14 +24,14 @@
             <div class="col-12 col-lg-9">
                 <div class="row">
                     <div class="col-12">
-                        <div class="c-cards-container c-cards-container-xs bottom-border">
+                        <div class="c-cards-container c-cards-container-xs bottom-border user-profile">
                             <div class="row">
                                 <div class="col-12">
-                                    <div class="col-12 col-lg-4 left-border">
+                                    <div class="col-12 left-border">
                                         {{this.render('partials/_single-article.twig', {
                                             article: userArticles[0], 
                                             imageSize: {width:508, height:324},
-                                            containerClass: 'card-2-mobile card-2-tablet card-2-desktop card-2--noDescription'
+                                            containerClass: 'card-2-mobile card-2-tablet card-7-desktop'
                                         }) | raw}}
                                     </div>
                                 </div>
