--- a/static/sass/components/_component.navigation.scss
+++ b/static/sass/components/_component.navigation.scss
@@ -54,40 +54,46 @@
                 cursor: pointer;
             }
             > li {
-                > a {
-                    @include font-size(16);
-                    line-height: 1.5;
-                    font-weight: $weightBold;
-                    color: $white;
-                    text-decoration: none;
-                    display: block;
-                    margin-left: 30px;
+                > .dropdown-listMenu {
+                    > a {
+                        @include font-size(16);
+                        line-height: 1.5;
+                        font-weight: $weightBold;
+                        color: $white;
+                        text-decoration: none;
+                        display: block;
+                        margin-left: 30px;
+                    }
                 }
                 + li {
                     margin-top: 25px;
                 }
 
                 &.dropdown {
-                    > .menu-icon {
-                        position: absolute;
-                        left: 0;
-                        width: 14px;
-                        height: 15px;
-                        background-image: url("../icons/icon-plus.svg");
-                        top: 4px;
+                    > .dropdown-listMenu {
+                        > .menu-icon {
+                            position: absolute;
+                            left: 0;
+                            width: 14px;
+                            height: 15px;
+                            background-image: url("../icons/icon-plus.svg");
+                            top: 4px;
+                        }
                     }
 
                     &.active {
-                        > .menu-icon {
-                            background-image: none;
-                            @include flexbox;
-                            @include align-items(center);
-                            @include justify-content(center);
-                            &:before {
-                                content: "";
-                                background-color: $white;
-                                height: 1px;
-                                width: 100%;
+                        > .dropdown-listMenu {
+                            > .menu-icon {
+                                background-image: none;
+                                @include flexbox;
+                                @include align-items(center);
+                                @include justify-content(center);
+                                &:before {
+                                    content: "";
+                                    background-color: $white;
+                                    height: 1px;
+                                    width: 100%;
+                                }
                             }
                         }
                     }
@@ -105,37 +111,43 @@
                     padding: 0;
                     margin-left: 30px;
                     > li {
-                        > a {
-                            @include font-size(14);
-                            line-height: 1.14;
-                            font-weight: $weightMedium;
-                            color: $white;
-                            text-decoration: none;
-                            display: block;
-                            margin-left: 30px;
-                            padding-top: 3px;
+                        >.sub-dropdown-item {
+                            > a {
+                                @include font-size(14);
+                                line-height: 1.14;
+                                font-weight: $weightMedium;
+                                color: $white;
+                                text-decoration: none;
+                                display: block;
+                                margin-left: 30px;
+                                padding-top: 3px;
+                            }
                         }
                         &.sub-dropdown {
-                            > .menu-icon {
-                                position: absolute;
-                                left: 0;
-                                width: 14px;
-                                height: 15px;
-                                background-image: url("../icons/icon-plus.svg");
-                                top: 4px;
+                            >.sub-dropdown-item {
+                                > .menu-icon {
+                                    position: absolute;
+                                    left: 0;
+                                    width: 14px;
+                                    height: 15px;
+                                    background-image: url("../icons/icon-plus.svg");
+                                    top: 4px;
+                                }
                             }
 
                             &.active {
-                                > .menu-icon {
-                                    background-image: none;
-                                    @include flexbox;
-                                    @include align-items(center);
-                                    @include justify-content(center);
-                                    &:before {
-                                        content: "";
-                                        background-color: $white;
-                                        height: 1px;
-                                        width: 100%;
+                                >.sub-dropdown-item {
+                                    > .menu-icon {
+                                        background-image: none;
+                                        @include flexbox;
+                                        @include align-items(center);
+                                        @include justify-content(center);
+                                        &:before {
+                                            content: "";
+                                            background-color: $white;
+                                            height: 1px;
+                                            width: 100%;
+                                        }
                                     }
                                 }
                             }
