--- a/error.twig
+++ b/error.twig
@@ -20,7 +20,7 @@
             <div class="c-error c-error-xs">
                 <div class="c-error__img">
                     <img src="{{networkData.templatePath}}/static/icons/error_2.svg" alt="Icon" />
-                    <div class="c-error__title">This page was not found.</div>
+                    <div class="c-error__title">Page not found</div>
                     <div class="c-error__message">{{messages}}</div>
                     <a href="/" class="c-error__button c-button c-button--lightBlue px-5">Back to home</a>
                 </div>
