--- a/static/sass/components/_component.error.scss
+++ b/static/sass/components/_component.error.scss
@@ -5,10 +5,10 @@
 
     &__title {
         margin: 30px 0 60px;
-        @include font-size(38);
+        @include font-size(25);
         line-height:  1.26;
         color: $black;
         font-family: $secondaryFont;
-        font-weight: $weightBold;
+        font-weight: $weightLight;
     }
 }
