--- a/static/sass/components/_component.footer.scss
+++ b/static/sass/components/_component.footer.scss
@@ -65,6 +65,14 @@
                     text-decoration: underline;
                 }
             }
+
+            .powered-img{
+                margin-top: -5px;
+                @include flexbox;
+                width: 17px;
+                height: 18px;
+                margin-right: 10px;
+            }
         }
         .c-navigation-0 {
             .c-navigation {
