--- a/article.twig
+++ b/article.twig
@@ -384,7 +384,7 @@ article.additionalInfo.image_crop == 'full' %}
     <script>
         // main script is defered so event listener makes sure
         // defered script is loaded before this runs
-        document.addEventListener("DOMContentLoaded", function (event) {
-            Acme.articleController = Acme.ArticleController();
-        });
+        //document.addEventListener("DOMContentLoaded", function (event) {
+            //Acme.articleController = Acme.ArticleController();
+        //});
     </script>
