--- a/static/sass/cards/_card.scss
+++ b/static/sass/cards/_card.scss
@@ -102,11 +102,13 @@
             @include font-size(12);
             color: $blue_sh5;
             font-weight: $weightMedium;
+            margin: 2px 0;
         }
 
         &__category-wrap {
             @include flexbox;
             @include align-items(center);
+            @include flex-wrap(wrap);
         }
 
         &__additional-category {
@@ -117,6 +119,7 @@
             font-weight: $weightMedium;
             padding: 2px 5px;
             background-color: $blue_sh5;
+            margin: 2px 10px 2px 0;
         }
 
         &__heading {
