--- a/static/sass/components/_component.article.scss
+++ b/static/sass/components/_component.article.scss
@@ -32,13 +32,11 @@
     @include font-size(12);
     line-height: 1.33;
     font-weight: $weightMedium;
-    margin: 2px 0;
   }
 
   &__category-wrap {
     @include flexbox;
     @include align-items(center);
-    @include flex-wrap(wrap);
     margin-bottom: 10px;
   }
 
@@ -59,13 +57,13 @@
   }
 
   &__additional-category {
+    margin-right: 10px;
     color: $white;
     @include font-size(12);
     line-height: 1.33;
     font-weight: $weightMedium;
     padding: 2px 5px;
     background-color: $blue_sh5;
-    margin: 2px 10px 2px 0;
   }
 
   &__title {
